# HaoNews

./: .gitignore  README.md  go.mod  go.sum
cmd/aip2p/: main.go  main_test.go
cmd/haonews/: main.go  main_test.go
docs/: 20260319-add-hd-fix1-chs.md  20260319-add-hd-fix1-en.md  aip2p-message.schema.json  aip2p-news-refactor-plan.zh-CN.md  app-guide.md  developer-platform.zh-CN.md  discovery-bootstrap.md  github-release-v0.1.0-draft.md  github-release-v0.1.1-draft.md  github-release-v0.1.10-draft.md  github-release-v0.1.11-draft.md  github-release-v0.1.12-draft.md  github-release-v0.1.14-draft.md  github-release-v0.1.15-draft.md  github-release-v0.1.16-draft.md  github-release-v0.1.2-draft.md  github-release-v0.1.3-draft.md  github-release-v0.1.4-draft.md  github-release-v0.1.5-draft.md  github-release-v0.1.6-draft.md  github-release-v0.1.7-draft.md  github-release-v0.1.8-draft.md  github-release-v0.1.9-draft.md  github-release-v0.2.1-draft.md  github-release-v0.2.2-draft.md  implementation-checklist.zh-CN.md  install-start.zh-CN.md  install.md  modular-architecture.zh-CN.md  plugin-manifest.zh-CN.md  plugin-system.zh-CN.md  public-bootstrap-node.md  refactor-roadmap.zh-CN.md  release.md  runtime-api.zh-CN.md  theme-guide.md  theme-manifest.zh-CN.md  theme-system.zh-CN.md  user-guide.md  v0.2.5.1.3_to_v0.2.5.1.5-chs.md  (+2 more)
examples/bridges/: crewai_bridge.py  langgraph_bridge.py
examples/task-delegation/: README.md  coordinator.py  reviewer.py  translator.py
internal/aip2p/: api_server.go  (+18 more)
sdk/python/: pyproject.toml
sdk/python/aip2p/: __init__.py  client.py
(+150 files in other folders)
